<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.focus.androidnote.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/life_cycle_activity_tv"
            android:text="@string/title_life_cycle_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/broadcast_receveier_tv"
            android:text="@string/title_activity_broadcast_receveier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/toolbar_tv"
            android:text="@string/title_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <!-- ToolbarSlidingTabActivity-->
        <TextView
            android:id="@+id/toolbar_sliding_tab_tv"
            android:text="@string/title_activity_toolbar_sliding_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/view_pager_tv"
            android:text="@string/title_activity_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/toolbar_fade_in_tv"
            android:text="@string/title_activity_toolbar_fade_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/status_bar_tv"
            android:text="@string/title_activity_status_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/custom_view_tv"
            android:text="@string/title_activity_custom_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/handle_tv"
            android:text="@string/title_activity_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/fragment_tv"
            android:text="@string/title_activity_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/volley_tv"
            android:text="@string/title_activity_volley"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/pop_window_tv"
            android:text="@string/title_activity_popup_window"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/media_player_tv"
            android:text="@string/title_activity_vitamio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/fresco_tv"
            android:text="Fresco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/glide_tv"
            android:text="Glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/web_view_tv"
            android:text="WebView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/retrofit_tv"
            android:text="Retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/wheel_view_tv"
            android:text="WheelView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/recycler_view_tv"
            android:text="RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/reflect_tv"
            android:text="Reflect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
        <TextView
            android:id="@+id/coordinator_tv"
            android:text="CoordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:clickable="true"
            android:onClick="tvOnClick"/>
    </LinearLayout>

</ScrollView>
